# onebuilding-scraper

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  build_readme.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
docs/: index.md  modules.md
modules/: index.html
notebooks/: pull_csv.ipynb  pull_old.ipynb
onebuilding_scraper/: __init__.py  utils.py
search/: search_index.json
tests/: test_dummy.py  test_foo.py
