[tool.poetry]
name = "onebuilding_scraper"
version = "0.0.1"
description = "This is a repository for scraping data from climate.onebuilding.org."
authors = ["Sam Wolk <wolk.sam@gmail.com>"]
repository = "https://github.com/szvsw/onebuilding-scraper"
documentation = "https://szvsw.github.io/onebuilding-scraper/"
readme = "README.md"
packages = [
  {include = "onebuilding_scraper"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ladybug-core = "^0.43.6"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
tqdm = "^4.66.5"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyright = "^1.1.382"
pre-commit = "^3.4.0"
tox = "^4.11.1"
jupyter = "^1.1.1"
pandas-stubs = "^2.2.2.240909"
types-beautifulsoup4 = "^4.12.0.20240907"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pyright]
include = ["onebuilding_scraper"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # docstrings
    "D"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
